--- a/uknown_xw0s65.t1_fast.json
+++ b/uknown_xw0s65.t1_fast.json
@@ -6,20 +6,20 @@
 	"sector": "HJG_7908",
 	"sec_level": 4,
 	"date_added": 1565555340989,
-	"last_scraped": 1570841799130,
+	"last_scraped": 1570848731458,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1565555340989
 		}
 	],
-	"next_scrape": 1570887610048,
+	"next_scrape": 1570892141518,
 	"category": "coin_flipper",
-	"last_update": 1570841799130,
+	"last_update": 1570848731458,
 	"output": [
 		{
 			"args": {},
-			"calls": 987155,
+			"calls": 1001472,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"iting",
@@ -54,6 +54,6 @@
 			]
 		}
 	],
-	"updt": 1570835284753,
-	"edit": 82
+	"updt": 1570841822688,
+	"edit": 83
 }
