--- a/uknown_42opr9.scripts.json
+++ b/uknown_42opr9.scripts.json
@@ -1,27 +1,27 @@
 {
 	"_id": "uknown_42opr9.scripts",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_42opr9.scripts",
 	"sector": "HJG_8314",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1570846389761,
+	"last_scraped": 1570853157739,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1570839565619,
-	"edit": 85,
-	"next_scrape": 1570891711471,
+	"updt": 1570846554425,
+	"edit": 86,
+	"next_scrape": 1570899035359,
 	"category": "coin_flipper",
-	"last_update": 1570846389761,
+	"last_update": 1570853157739,
 	"output": [
 		{
 			"args": {},
-			"calls": 741703,
+			"calls": 752559,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"LETE ",
