--- a/unknown_si4i7s.bot_brain.json
+++ b/unknown_si4i7s.bot_brain.json
@@ -1,27 +1,27 @@
 {
 	"_id": "unknown_si4i7s.bot_brain",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_si4i7s.bot_brain",
 	"sector": "VNP_7267",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1570846951788,
+	"last_scraped": 1570853640044,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1570840018525,
-	"edit": 180,
-	"next_scrape": 1570887711602,
+	"updt": 1570847006412,
+	"edit": 181,
+	"next_scrape": 1570899722612,
 	"category": "coin_flipper",
-	"last_update": 1570846951788,
+	"last_update": 1570853640044,
 	"output": [
 		{
 			"args": {},
-			"calls": 1620342,
+			"calls": 1635957,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"y've ",
