--- a/uknown_9j64nk.birb.json
+++ b/uknown_9j64nk.birb.json
@@ -45,13 +45,19 @@
 				{
 					"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
 					"frags": [
-						"ngth ",
+						"15C s",
+						" wins",
 						" set ",
+						"to 0 i",
 						" attac",
+						" BREAK",
 						"h to 0 ",
 						"5C stre",
 						" \\n215C",
-						" if atta"
+						"rength t",
+						"efender ",
+						" if atta",
+						"ender \\n2"
 					]
 				}
 			]
@@ -84,13 +90,22 @@
 				{
 					"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
 					"frags": [
-						"ngth ",
+						"t dam",
+						"15C s",
 						" set ",
+						"to 0 i",
 						" attac",
+						" BREAK",
+						"ker win",
 						"h to 0 ",
 						"5C stre",
 						" \\n215C",
-						" if atta"
+						"rength t",
+						"er wins,",
+						"efender ",
+						"amage is",
+						" if atta",
+						"ender \\n2"
 					]
 				}
 			]
@@ -126,23 +141,26 @@
 			]
 		}
 	],
-	"updt": 1570602128402,
-	"edit": 10,
+	"updt": 1570659620195,
+	"edit": 11,
 	"identified": [
 		{
 			"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
 			"frags": [
+				"t dam",
 				"15C s",
-				" wins",
 				" set ",
 				"to 0 i",
 				" attac",
 				" BREAK",
+				"ker win",
 				"h to 0 ",
 				"5C stre",
 				" \\n215C",
 				"rength t",
+				"er wins,",
 				"efender ",
+				"amage is",
 				" if atta",
 				"ender \\n2"
 			]
