--- a/unknown_b8wg6g.protector.json
+++ b/unknown_b8wg6g.protector.json
@@ -1,25 +1,29 @@
 {
 	"_id": "unknown_b8wg6g.protector",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "dead",
 	"script": "unknown_b8wg6g.protector",
 	"sector": "HJG_2788",
 	"sec_level": 4,
 	"date_added": 1563132582095,
-	"last_scraped": 1570848982391,
+	"last_scraped": 1570855648793,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1563132582095
+		},
+		{
+			"type": "died",
+			"when": 1570855898879
 		}
 	],
-	"next_scrape": 1570890395804,
+	"next_scrape": 1570896508825,
 	"category": "coin_flipper",
-	"last_update": 1570848982391,
+	"last_update": 1570855648793,
 	"output": [
 		{
 			"args": {},
-			"calls": 2087844,
+			"calls": 2094930,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"sus t",
@@ -99,6 +103,6 @@
 			]
 		}
 	],
-	"updt": 1570842274941,
-	"edit": 191
+	"updt": 1570855805579,
+	"edit": 193
 }
