--- a/uknown_28mx3w.bot_scam_do_not_run.json
+++ b/uknown_28mx3w.bot_scam_do_not_run.json
@@ -52,6 +52,50 @@
 						"ary, tho",
 						"? ## It'"
 					]
+				},
+				{
+					"document": "NOT FOUND",
+					"frags": [
+						"tor s",
+						"ares ",
+						"vice 'C",
+						"ollapse",
+						"SINGAPO",
+						"e has co"
+					]
+				},
+				{
+					"document": "MFT0XE1_CLST0X61_SECT0X665E_FILE0X0D96F593",
+					"frags": [
+						"that ",
+						"hat o"
+					]
+				},
+				{
+					"document": "MFT0XD1_CLST0X95_SECT0X23E7_FILE0X8CAB060B",
+					"frags": [
+						"that ",
+						" serv"
+					]
+				},
+				{
+					"document": "MFT0XF1_CLST0X75_SECT0X73F7_FILE0X9CB5E952",
+					"frags": [
+						"that ",
+						"hat o"
+					]
+				},
+				{
+					"document": "MFT0X71_CLST0X8A_SECT0X7356_FILE0X14AFF93F",
+					"frags": [
+						" serv"
+					]
+				},
+				{
+					"document": "Cycle/Don Quixote",
+					"frags": [
+						" serv"
+					]
 				}
 			]
 		}
@@ -69,8 +113,52 @@
 				"ary, tho",
 				"? ## It'"
 			]
+		},
+		{
+			"document": "NOT FOUND",
+			"frags": [
+				"tor s",
+				"ares ",
+				"vice 'C",
+				"ollapse",
+				"SINGAPO",
+				"e has co"
+			]
+		},
+		{
+			"document": "MFT0XE1_CLST0X61_SECT0X665E_FILE0X0D96F593",
+			"frags": [
+				"that ",
+				"hat o"
+			]
+		},
+		{
+			"document": "MFT0XD1_CLST0X95_SECT0X23E7_FILE0X8CAB060B",
+			"frags": [
+				"that ",
+				" serv"
+			]
+		},
+		{
+			"document": "MFT0XF1_CLST0X75_SECT0X73F7_FILE0X9CB5E952",
+			"frags": [
+				"that ",
+				"hat o"
+			]
+		},
+		{
+			"document": "MFT0X71_CLST0X8A_SECT0X7356_FILE0X14AFF93F",
+			"frags": [
+				" serv"
+			]
+		},
+		{
+			"document": "Cycle/Don Quixote",
+			"frags": [
+				" serv"
+			]
 		}
 	],
-	"updt": 1570863473701,
-	"edit": 291
+	"updt": 1570870010531,
+	"edit": 292
 }
