--- a/unknown_1fif7m.specs.json
+++ b/unknown_1fif7m.specs.json
@@ -1,24 +1,24 @@
 {
 	"_id": "unknown_1fif7m.specs",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_1fif7m.specs",
 	"sector": "K_2217",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1570865618056,
+	"last_scraped": 1570872353891,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1570859189325,
-	"edit": 36,
+	"updt": 1570865729700,
+	"edit": 37,
 	"scrape_ct": 5,
-	"next_scrape": 1570907186887,
+	"next_scrape": 1570915096284,
 	"category": "plant_sim",
-	"last_update": 1570865618056,
+	"last_update": 1570872353891,
 	"output": [
 		{
 			"args": {},
@@ -50,7 +50,7 @@
 		},
 		{
 			"args": {},
-			"calls": 22839,
+			"calls": 24027,
 			"base": "c:\"w9l07b\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
 			"fragments": [
 				"'re ma",
