--- a/unknown_bjl3my.extras.json
+++ b/unknown_bjl3my.extras.json
@@ -6,20 +6,20 @@
 	"sector": "VNP_2284",
 	"sec_level": 4,
 	"date_added": 1563713987809,
-	"last_scraped": 1570868535143,
+	"last_scraped": 1570875217012,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1563713987809
 		}
 	],
-	"next_scrape": 1570909268239,
+	"next_scrape": 1570915363939,
 	"category": "dice_roller",
-	"last_update": 1570868535143,
+	"last_update": 1570875217012,
 	"output": [
 		{
 			"args": {},
-			"calls": 999448,
+			"calls": 1010264,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"ST0X7",
@@ -87,6 +87,6 @@
 			]
 		}
 	],
-	"updt": 1570862120288,
-	"edit": 96
+	"updt": 1570875193737,
+	"edit": 98
 }
