--- a/uknown_ewk6vx.libdb.json
+++ b/uknown_ewk6vx.libdb.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_ewk6vx.libdb",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_ewk6vx.libdb",
 	"sector": "HJG_7617",
 	"sec_level": 4,
 	"date_added": 1566226212198,
-	"last_scraped": 1570870453393,
+	"last_scraped": 1570877096706,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,13 +14,13 @@
 		}
 	],
 	"scrape_ct": 6,
-	"next_scrape": 1570910055722,
+	"next_scrape": 1570923731756,
 	"category": "coin_flipper",
-	"last_update": 1570870453393,
+	"last_update": 1570877096706,
 	"output": [
 		{
 			"args": {},
-			"calls": 1737143,
+			"calls": 1751402,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"y tak",
@@ -159,6 +159,6 @@
 			]
 		}
 	],
-	"updt": 1570863924312,
-	"edit": 200
+	"updt": 1570870461711,
+	"edit": 201
 }
