--- a/uknown_pneesb.syslog.json
+++ b/uknown_pneesb.syslog.json
@@ -73,14 +73,21 @@
 				{
 					"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
 					"frags": [
+						"the t",
+						"disca",
 						"card t",
 						"When r",
+						"@. Whe",
 						"2 of t",
-						" is @.",
 						"hen rev",
 						"evealed",
 						"card\\n2",
-						" of the"
+						" reveal",
+						" of the",
+						"ed\\n2161",
+						" is @. W",
+						"d\\n2162 o",
+						"\\n2161 di"
 					]
 				}
 			]
@@ -90,24 +97,27 @@
 		{
 			"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
 			"frags": [
-				"2161 ",
-				"is @. ",
+				"the t",
+				"disca",
 				"When r",
 				"2 of t",
-				" is @.",
 				" @. Wh",
 				"hen rev",
 				"evealed",
 				"card\\n2",
+				" reveal",
 				" of the",
 				"iscard t",
 				"ed\\n2161",
 				"@. When ",
 				"2162 of ",
-				"op card\\n"
+				" is @. W",
+				"op card\\n",
+				"d\\n2162 o",
+				"\\n2161 di"
 			]
 		}
 	],
-	"updt": 1570869560186,
-	"edit": 186
+	"updt": 1570876321626,
+	"edit": 187
 }
