--- a/unknown_4xh4jz.db.json
+++ b/unknown_4xh4jz.db.json
@@ -1,25 +1,29 @@
 {
 	"_id": "unknown_4xh4jz.db",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "dead",
 	"script": "unknown_4xh4jz.db",
 	"sector": "K_7459",
 	"sec_level": 4,
 	"date_added": 1564371134260,
-	"last_scraped": 1570870986727,
+	"last_scraped": 1570877627843,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1564371134260
+		},
+		{
+			"type": "died",
+			"when": 1570877863048
 		}
 	],
-	"next_scrape": 1570911602139,
+	"next_scrape": 1570920008232,
 	"category": "dice_roller",
-	"last_update": 1570870986727,
+	"last_update": 1570877627843,
 	"output": [
 		{
 			"args": {},
-			"calls": 2143817,
+			"calls": 2148225,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"sic s",
@@ -90,6 +94,6 @@
 			]
 		}
 	],
-	"updt": 1570864375738,
-	"edit": 205
+	"updt": 1570877674458,
+	"edit": 207
 }
