--- a/uknown_lqxcau.inventory.json
+++ b/uknown_lqxcau.inventory.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_lqxcau.inventory",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_lqxcau.inventory",
 	"sector": "NGC_4527",
 	"sec_level": 3,
 	"date_added": 1563655647379,
-	"last_scraped": 1570871167664,
+	"last_scraped": 1570877909637,
 	"script_log": [
 		{
 			"type": "added",
@@ -21,19 +21,19 @@
 			}
 		]
 	],
-	"updt": 1570864601390,
-	"edit": 270,
+	"updt": 1570877898538,
+	"edit": 272,
 	"pl_output": "`1For more information about using inventory, check out {` help: true`1 }`\n",
-	"next_scrape": 1570915312731,
+	"next_scrape": 1570919976799,
 	"scrape_ct": 13,
 	"category": "UNKNOWN CATEGORY",
-	"last_update": 1570871167664,
+	"last_update": 1570877909637,
 	"output": [
 		{
 			"args": {
 				"sort": "count"
 			},
-			"calls": 9440,
+			"calls": 9822,
 			"base": "`1For more information about using inventory, check out {` help: true`1 }`\n",
 			"fragments": [
 				"than ",
