--- a/unknown_3ae6km.recruitment.json
+++ b/unknown_3ae6km.recruitment.json
@@ -1,23 +1,23 @@
 {
 	"_id": "unknown_3ae6km.recruitment",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_3ae6km.recruitment",
 	"sector": "SPC_2784",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1570879247926,
+	"last_scraped": 1570879266213,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1570872714855,
-	"edit": 57,
-	"next_scrape": 1570924219201,
+	"updt": 1570879253593,
+	"edit": 58,
+	"next_scrape": 1570921581609,
 	"category": "plant_sim",
-	"last_update": 1570879247926,
+	"last_update": 1570879266213,
 	"output": [
 		{
 			"args": {},
@@ -66,7 +66,7 @@
 		},
 		{
 			"args": {},
-			"calls": 23362,
+			"calls": 24426,
 			"base": "c:\"sxfjac\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
 			"fragments": [
 				" 'tra",
