--- a/uknown_esu7dm.forums.json
+++ b/uknown_esu7dm.forums.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_esu7dm.forums",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "uknown_esu7dm.forums",
 	"sector": "HJG_8307",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1562331437354
+		},
+		{
+			"type": "died",
+			"when": 1570889069334
 		}
 	],
 	"next_scrape": 1570642167510,
@@ -146,6 +150,6 @@
 			]
 		}
 	],
-	"updt": 1568811842418,
-	"edit": 42
+	"updt": 1570602128402,
+	"edit": 43
 }
