--- a/uknown_28mx3w.bot_scam_do_not_run.json
+++ b/uknown_28mx3w.bot_scam_do_not_run.json
@@ -1,25 +1,25 @@
 {
 	"_id": "uknown_28mx3w.bot_scam_do_not_run",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_28mx3w.bot_scam_do_not_run",
 	"sector": "K_3804",
 	"sec_level": 4,
 	"date_added": 1564555767749,
-	"last_scraped": 1570903706389,
+	"last_scraped": 1570903745706,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1564555767749
 		}
 	],
-	"next_scrape": 1570945307772,
+	"next_scrape": 1570943913981,
 	"category": "coin_flipper",
-	"last_update": 1570903706389,
+	"last_update": 1570903745706,
 	"output": [
 		{
 			"args": {},
-			"calls": 2993341,
+			"calls": 3002330,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"tor s",
@@ -159,6 +159,6 @@
 			]
 		}
 	],
-	"updt": 1570897168058,
-	"edit": 297
+	"updt": 1570903714068,
+	"edit": 298
 }
