--- a/unknown_ywicgz.bot_brain.json
+++ b/unknown_ywicgz.bot_brain.json
@@ -1,21 +1,21 @@
 {
 	"_id": "unknown_ywicgz.bot_brain",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_ywicgz.bot_brain",
 	"sector": "K_2655",
 	"sec_level": 4,
 	"date_added": 1565132603473,
-	"last_scraped": 1570902629381,
+	"last_scraped": 1570909153890,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1565132603473
 		}
 	],
-	"next_scrape": 1570947507125,
+	"next_scrape": 1570955381178,
 	"category": "plant_sim",
-	"last_update": 1570902629381,
+	"last_update": 1570909153890,
 	"output": [
 		{
 			"args": {},
@@ -51,7 +51,7 @@
 		},
 		{
 			"args": {},
-			"calls": 110524,
+			"calls": 112055,
 			"base": "c:\"uvt0kv\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
 			"fragments": [
 				"utolog",
@@ -108,6 +108,6 @@
 			]
 		}
 	],
-	"updt": 1570896266820,
-	"edit": 128
+	"updt": 1570909124597,
+	"edit": 130
 }
