--- a/uknown_c671te.quack.json
+++ b/uknown_c671te.quack.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_c671te.quack",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_c671te.quack",
 	"sector": "VNP_7825",
 	"sec_level": 4,
 	"date_added": 1566460947728,
-	"last_scraped": 1570904970527,
+	"last_scraped": 1570911364117,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,9 +14,9 @@
 		}
 	],
 	"scrape_ct": 3,
-	"next_scrape": 1570949532012,
+	"next_scrape": 1570955914198,
 	"category": "plant_sim",
-	"last_update": 1570904970527,
+	"last_update": 1570911364117,
 	"output": [
 		{
 			"args": {},
@@ -152,7 +152,7 @@
 		},
 		{
 			"args": {},
-			"calls": 17075,
+			"calls": 18201,
 			"base": "c:\"51m589\" d:\"<f l n s w>\"\n***\n\n\n\n               \n                Ã\n               ÁÁÁÁ\n                ÁÃ\n               ",
 			"fragments": [
 				"T0XF4_",
@@ -175,6 +175,6 @@
 			]
 		}
 	],
-	"updt": 1570898524510,
-	"edit": 213
+	"updt": 1570905068059,
+	"edit": 214
 }
