--- a/unknown_v4fsde.t3_clean.json
+++ b/unknown_v4fsde.t3_clean.json
@@ -1,23 +1,23 @@
 {
 	"_id": "unknown_v4fsde.t3_clean",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_v4fsde.t3_clean",
 	"sector": "K_0542",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1570906457048,
+	"last_scraped": 1570912832078,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1570899879001,
-	"edit": 74,
-	"next_scrape": 1570947263030,
+	"updt": 1570906644246,
+	"edit": 75,
+	"next_scrape": 1570954257097,
 	"category": "plant_sim",
-	"last_update": 1570906457048,
+	"last_update": 1570912832078,
 	"output": [
 		{
 			"args": {},
@@ -65,7 +65,7 @@
 		},
 		{
 			"args": {},
-			"calls": 26019,
+			"calls": 26856,
 			"base": "c:\"rb3zcq\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
 			"fragments": [
 				"00\\n000",
