--- a/uknown_rhkdnz.sortupgrades.json
+++ b/uknown_rhkdnz.sortupgrades.json
@@ -1,25 +1,25 @@
 {
 	"_id": "uknown_rhkdnz.sortupgrades",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_rhkdnz.sortupgrades",
 	"sector": "SPC_6536",
 	"sec_level": 4,
 	"date_added": 1564761469085,
-	"last_scraped": 1570916756800,
+	"last_scraped": 1570923068858,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1564761469085
 		}
 	],
-	"next_scrape": 1570961671281,
+	"next_scrape": 1570968635321,
 	"category": "coin_flipper",
-	"last_update": 1570916756800,
+	"last_update": 1570923068858,
 	"output": [
 		{
 			"args": {},
-			"calls": 1840100,
+			"calls": 1855813,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"u fou",
@@ -73,6 +73,6 @@
 			]
 		}
 	],
-	"updt": 1570910480691,
-	"edit": 165
+	"updt": 1570916791099,
+	"edit": 166
 }
