--- a/uknown_lqxcau.tos.json
+++ b/uknown_lqxcau.tos.json
@@ -1,20 +1,20 @@
 {
 	"_id": "uknown_lqxcau.tos",
 	"type": "fragment",
-	"mode": "player",
+	"mode": "timeout",
 	"script": "uknown_lqxcau.tos",
 	"sector": "VNP_8719",
 	"sec_level": 2,
 	"date_added": 1563655759056,
-	"last_scraped": 1570922283209,
+	"last_scraped": 1570928936620,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1563655759056
 		}
 	],
-	"updt": 1570916340985,
-	"edit": 72,
+	"updt": 1570922428733,
+	"edit": 73,
 	"pl_output": "Welcome to `FTown Of Salem` `2Hackmud Edition`!\nThis is an interface guide. Game guide: `1http://town-of-``1salem``1.wikia``1.com/wiki/Getting_Started`\n\n`FLobby`\nTo queue up for a game, use `Nqueue`: `Vtrue`.\nThe game will start automatically when 15 players queue up.\nIf you are the host, you can start the game early, once there are at least 4 players, you can manually start the game with `Nstart`: `Vtrue`.\n\n`FDay`\nTo vote, use `Nvote`: `0<player #>`",
-	"next_scrape": 1571002003235
+	"next_scrape": 1571022133900
 }
