--- a/uknown_864wmx.bot_brain_calc.json
+++ b/uknown_864wmx.bot_brain_calc.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_864wmx.bot_brain_calc",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_864wmx.bot_brain_calc",
 	"sector": "K_2217",
 	"sec_level": 4,
 	"date_added": 1563311562266,
-	"last_scraped": 1570924502946,
+	"last_scraped": 1570931107999,
 	"script_log": [
 		{
 			"type": "added",
@@ -22,16 +22,16 @@
 		]
 	],
 	"pl_output": "To use, either:\n1. Provide `Nu`:`V#s.sys.upgrades` and optionally i:<array of indices>.\n2. Provide `Ncost` and `Ncooldown`.",
-	"next_scrape": 1570967704396,
-	"updt": 1570918145156,
-	"edit": 1489,
+	"next_scrape": 1570974093259,
+	"updt": 1570924683026,
+	"edit": 1490,
 	"scrape_ct": 1,
 	"category": "UNKNOWN CATEGORY",
-	"last_update": 1570924502946,
+	"last_update": 1570931107999,
 	"output": [
 		{
 			"args": {},
-			"calls": 362439,
+			"calls": 373163,
 			"base": "To use, either:\n1. Provide `Nu`:`V#s.sys.upgrades` and optionally i:<array of indices>.\n2. Provide `Ncost` and `Ncooldown`.",
 			"fragments": [
 				"efunc",
