--- a/uknown_864wmx.t1.json
+++ b/uknown_864wmx.t1.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_864wmx.t1",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_864wmx.t1",
 	"sector": "K_2217",
 	"sec_level": 4,
 	"date_added": 1563311793098,
-	"last_scraped": 1570925298505,
+	"last_scraped": 1570931811327,
 	"script_log": [
 		{
 			"type": "added",
@@ -21,16 +21,16 @@
 			}
 		]
 	],
-	"updt": 1570918822345,
-	"edit": 1494,
+	"updt": 1570925359218,
+	"edit": 1495,
 	"pl_output": "Usage:\n`Nscrape`:`V#s.t1.corp` -- self explanatory. Optionally pass format:true to return the locs formatted for cracking.\n`Ncrack`:`V#s.t1.npc` -- self explanatory.",
-	"next_scrape": 1570968437350,
+	"next_scrape": 1570972527644,
 	"category": "UNKNOWN CATEGORY",
-	"last_update": 1570925298505,
+	"last_update": 1570931811327,
 	"output": [
 		{
 			"args": {},
-			"calls": 6262156,
+			"calls": 6475822,
 			"base": "Usage:\n`Nscrape`:`V#s.t1.corp` -- self explanatory. Optionally pass format:true to return the locs formatted for cracking.\n`Ncrack`:`V#s.t1.npc` -- self explanatory.",
 			"fragments": [
 				"nervo",
