--- a/uknown_dobbrb.viewk3ys.json
+++ b/uknown_dobbrb.viewk3ys.json
@@ -6,19 +6,19 @@
 	"sector": "NGC_6016",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1570924363402,
+	"last_scraped": 1570930907027,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1570918145156,
-	"edit": 46,
+	"updt": 1570924459687,
+	"edit": 47,
 	"scrape_ct": 1,
-	"next_scrape": 1570965010984,
+	"next_scrape": 1570976745399,
 	"category": "plant_sim",
-	"last_update": 1570924363402,
+	"last_update": 1570930907027,
 	"output": [
 		{
 			"args": {},
@@ -50,6 +50,19 @@
 			"args": {},
 			"calls": 30498,
 			"base": "c:\"jccvvi\" d:\"<f l n s w>\"\n\n\n\n\n\n                 \n                 Ã\n                 ",
+			"fragments": [
+				"deal d",
+				".\\n20F",
+				"2101 th",
+				"r's stac",
+				"eal dama",
+				"amage to"
+			]
+		},
+		{
+			"args": {},
+			"calls": 582,
+			"base": "c:\"jccvvi\" d:\"<f l n s w>\"\n\n\n\n\n\n                \n                ÃÃ\n                ",
 			"fragments": [
 				"deal d",
 				".\\n20F",
