--- a/uknown_xw0s65.t1_fast.json
+++ b/uknown_xw0s65.t1_fast.json
@@ -1,25 +1,25 @@
 {
 	"_id": "uknown_xw0s65.t1_fast",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_xw0s65.t1_fast",
 	"sector": "HJG_7908",
 	"sec_level": 4,
 	"date_added": 1565555340989,
-	"last_scraped": 1570928122120,
+	"last_scraped": 1570934535217,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1565555340989
 		}
 	],
-	"next_scrape": 1570970006992,
+	"next_scrape": 1570980721944,
 	"category": "coin_flipper",
-	"last_update": 1570928122120,
+	"last_update": 1570934535217,
 	"output": [
 		{
 			"args": {},
-			"calls": 1092285,
+			"calls": 1109626,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"iting",
@@ -54,6 +54,6 @@
 			]
 		}
 	],
-	"updt": 1570921527178,
-	"edit": 95
+	"updt": 1570928289908,
+	"edit": 96
 }
