--- a/unknown_0o6wpi.paypal.json
+++ b/unknown_0o6wpi.paypal.json
@@ -1,21 +1,21 @@
 {
 	"_id": "unknown_0o6wpi.paypal",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_0o6wpi.paypal",
 	"sector": "HJG_0482",
 	"sec_level": 4,
 	"date_added": 1565327917562,
-	"last_scraped": 1570934414550,
+	"last_scraped": 1570941665031,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1565327917562
 		}
 	],
-	"next_scrape": 1570980535568,
+	"next_scrape": 1570988051398,
 	"category": "plant_sim",
-	"last_update": 1570934414550,
+	"last_update": 1570941665031,
 	"output": [
 		{
 			"args": {},
@@ -43,7 +43,7 @@
 		},
 		{
 			"args": {},
-			"calls": 92843,
+			"calls": 94504,
 			"base": "c:\"dep9ej\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
 			"fragments": [
 				"y bui",
@@ -108,6 +108,6 @@
 			]
 		}
 	],
-	"updt": 1570928289908,
-	"edit": 136
+	"updt": 1570934608371,
+	"edit": 137
 }
