--- a/unknown_3x3xr8.ego_fuel.json
+++ b/unknown_3x3xr8.ego_fuel.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_3x3xr8.ego_fuel",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "unknown_3x3xr8.ego_fuel",
 	"sector": "SPC_4677",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1562774188165
+		},
+		{
+			"type": "died",
+			"when": 1570952450367
 		}
 	],
 	"next_scrape": 1570717578844,
@@ -176,8 +180,8 @@
 			]
 		}
 	],
-	"updt": 1570603708726,
-	"edit": 21,
+	"updt": 1570674052005,
+	"edit": 22,
 	"retry_args": [
 		{
 			"do": "clean"
