--- a/uknown_xcgazw.specs.json
+++ b/uknown_xcgazw.specs.json
@@ -1,23 +1,23 @@
 {
 	"_id": "uknown_xcgazw.specs",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_xcgazw.specs",
 	"sector": "HJG_8314",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1570954903673,
+	"last_scraped": 1570954933460,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1570939789862,
-	"edit": 93,
-	"next_scrape": 1570999554152,
+	"updt": 1570954912025,
+	"edit": 94,
+	"next_scrape": 1570996332116,
 	"category": "plant_sim",
-	"last_update": 1570954903673,
+	"last_update": 1570954933460,
 	"output": [
 		{
 			"args": {},
@@ -57,7 +57,7 @@
 		},
 		{
 			"args": {},
-			"calls": 26682,
+			"calls": 28088,
 			"base": "c:\"95f7hs\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
 			"fragments": [
 				"that ",
