--- a/unknown_3x3xr8.ego_fuel.json
+++ b/unknown_3x3xr8.ego_fuel.json
@@ -53,14 +53,24 @@
 					"frags": [
 						"y do.",
 						"vaila",
-						"'s wh",
+						"o. So",
+						"lable",
+						"ey do",
+						"do. S",
+						"al, i",
+						" do. ",
 						"with a",
 						"erial,",
 						" avail",
 						"uld. Th",
-						"ey buil",
+						"uild wi",
+						"material",
+						"it's wha",
+						"hey buil",
 						"d. They ",
-						" what th"
+						"able mat",
+						" what th",
+						" They bu"
 					]
 				}
 			]
@@ -104,14 +114,24 @@
 					"frags": [
 						"y do.",
 						"vaila",
-						"'s wh",
+						"o. So",
+						"lable",
+						"ey do",
+						"do. S",
+						"al, i",
+						" do. ",
 						"with a",
 						"erial,",
 						" avail",
 						"uld. Th",
-						"ey buil",
+						"uild wi",
+						"material",
+						"it's wha",
+						"hey buil",
 						"d. They ",
-						" what th"
+						"able mat",
+						" what th",
+						" They bu"
 					]
 				}
 			]
@@ -150,14 +170,24 @@
 					"frags": [
 						"y do.",
 						"vaila",
-						"'s wh",
+						"o. So",
+						"lable",
+						"ey do",
+						"do. S",
+						"al, i",
+						" do. ",
 						"with a",
 						"erial,",
 						" avail",
 						"uld. Th",
-						"ey buil",
+						"uild wi",
+						"material",
+						"it's wha",
+						"hey buil",
 						"d. They ",
-						" what th"
+						"able mat",
+						" what th",
+						" They bu"
 					]
 				}
 			]
@@ -169,19 +199,29 @@
 			"frags": [
 				"y do.",
 				"vaila",
-				"'s wh",
+				"o. So",
+				"lable",
+				"ey do",
+				"do. S",
+				"al, i",
+				" do. ",
 				"with a",
 				"erial,",
 				" avail",
 				"uld. Th",
-				"ey buil",
+				"uild wi",
+				"material",
+				"it's wha",
+				"hey buil",
 				"d. They ",
-				" what th"
+				"able mat",
+				" what th",
+				" They bu"
 			]
 		}
 	],
-	"updt": 1570674052005,
-	"edit": 22,
+	"updt": 1570952658007,
+	"edit": 23,
 	"retry_args": [
 		{
 			"do": "clean"
