--- a/uknown_56z58x.clear.json
+++ b/uknown_56z58x.clear.json
@@ -1,23 +1,23 @@
 {
 	"_id": "uknown_56z58x.clear",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_56z58x.clear",
 	"sector": "NGC_1025",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1570954259521,
+	"last_scraped": 1570961014660,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1570938663206,
-	"edit": 50,
-	"next_scrape": 1570999864085,
+	"updt": 1570954461464,
+	"edit": 51,
+	"next_scrape": 1571003114880,
 	"category": "plant_sim",
-	"last_update": 1570954259521,
+	"last_update": 1570961014660,
 	"output": [
 		{
 			"args": {},
@@ -51,7 +51,7 @@
 		},
 		{
 			"args": {},
-			"calls": 32311,
+			"calls": 33719,
 			"base": "c:\"ip9w6z\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
 			"fragments": [
 				"is st",
