--- a/uknown_pg7a89.q.json
+++ b/uknown_pg7a89.q.json
@@ -43,15 +43,22 @@
 				{
 					"document": "MFT0XE1_CLST0X61_SECT0X665E_FILE0X0D96F593",
 					"frags": [
+						"| NET",
+						"W ERR",
+						"SER m",
 						"OR | P",
 						"ILE0X0",
 						"65E_FI",
 						" ERROR",
 						"olliste",
 						"T0XE1_C",
+						"MFT0XE1",
 						"FT0XE1_",
 						"llister ",
-						"X61_SECT"
+						"_CLST0X6",
+						"X61_SECT",
+						" | TIME ",
+						" | PROG "
 					]
 				}
 			]
@@ -61,18 +68,25 @@
 		{
 			"document": "MFT0XE1_CLST0X61_SECT0X665E_FILE0X0D96F593",
 			"frags": [
+				"| NET",
+				"W ERR",
+				"SER m",
 				"OR | P",
 				"ILE0X0",
 				"65E_FI",
 				" ERROR",
 				"olliste",
 				"T0XE1_C",
+				"MFT0XE1",
 				"FT0XE1_",
 				"llister ",
-				"X61_SECT"
+				"_CLST0X6",
+				"X61_SECT",
+				" | TIME ",
+				" | PROG "
 			]
 		}
 	],
-	"updt": 1570965165030,
-	"edit": 149
+	"updt": 1570971704919,
+	"edit": 150
 }
