--- a/uknown_g6pj2l.obtuse.json
+++ b/uknown_g6pj2l.obtuse.json
@@ -1,28 +1,28 @@
 {
 	"_id": "uknown_g6pj2l.obtuse",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_g6pj2l.obtuse",
 	"sector": "NGC_1025",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1570967473440,
+	"last_scraped": 1570974044862,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1570961101858,
-	"edit": 51,
+	"updt": 1570967645831,
+	"edit": 52,
 	"scrape_ct": 0,
-	"next_scrape": 1571010299573,
+	"next_scrape": 1571017895950,
 	"category": "coin_flipper",
-	"last_update": 1570967473440,
+	"last_update": 1570974044862,
 	"output": [
 		{
 			"args": {},
-			"calls": 411996,
+			"calls": 425405,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"t? ## ",
