--- a/uknown_pneesb.syslog.json
+++ b/uknown_pneesb.syslog.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_pneesb.syslog",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_pneesb.syslog",
 	"sector": "NGC_1836",
 	"sec_level": 4,
 	"date_added": 1564714810021,
-	"last_scraped": 1570977893173,
+	"last_scraped": 1570984731844,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,9 +14,9 @@
 		}
 	],
 	"scrape_ct": 9,
-	"next_scrape": 1571020656035,
+	"next_scrape": 1571024744493,
 	"category": "plant_sim",
-	"last_update": 1570977893173,
+	"last_update": 1570984731844,
 	"output": [
 		{
 			"args": {},
@@ -50,7 +50,7 @@
 		},
 		{
 			"args": {},
-			"calls": 175749,
+			"calls": 177243,
 			"base": "c:\"2fbkfi\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
 			"fragments": [
 				"the t",
@@ -118,6 +118,6 @@
 			]
 		}
 	],
-	"updt": 1570971254113,
-	"edit": 201
+	"updt": 1570978017990,
+	"edit": 202
 }
