--- a/unknown_aprmr6.acct.json
+++ b/unknown_aprmr6.acct.json
@@ -1,25 +1,25 @@
 {
 	"_id": "unknown_aprmr6.acct",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_aprmr6.acct",
 	"sector": "SPC_7402",
 	"sec_level": 4,
 	"date_added": 1562756729085,
-	"last_scraped": 1570979225559,
+	"last_scraped": 1570986056405,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1562756729085
 		}
 	],
-	"next_scrape": 1571023529631,
+	"next_scrape": 1571029562468,
 	"category": "dice_roller",
-	"last_update": 1570979225559,
+	"last_update": 1570986056405,
 	"output": [
 		{
 			"args": {},
-			"calls": 4265300,
+			"calls": 4276359,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"you w",
@@ -353,6 +353,6 @@
 			]
 		}
 	],
-	"updt": 1570972605830,
-	"edit": 430
+	"updt": 1570979370303,
+	"edit": 431
 }
