--- a/unknown_43cjrs.box.json
+++ b/unknown_43cjrs.box.json
@@ -6,22 +6,22 @@
 	"sector": "K_0542",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1570988577955,
+	"last_scraped": 1570995139050,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1570981625498,
-	"edit": 119,
-	"next_scrape": 1571029064609,
+	"updt": 1570989074297,
+	"edit": 120,
+	"next_scrape": 1571037511573,
 	"category": "coin_flipper",
-	"last_update": 1570988577955,
+	"last_update": 1570995139050,
 	"output": [
 		{
 			"args": {},
-			"calls": 986790,
+			"calls": 1002988,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"tructu",
