--- a/unknown_rjrzwu.fuckthisshitimout.json
+++ b/unknown_rjrzwu.fuckthisshitimout.json
@@ -1,21 +1,21 @@
 {
 	"_id": "unknown_rjrzwu.fuckthisshitimout",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_rjrzwu.fuckthisshitimout",
 	"sector": "K_2748",
 	"sec_level": 4,
 	"date_added": 1564141596158,
-	"last_scraped": 1570990416350,
+	"last_scraped": 1570997060996,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1564141596158
 		}
 	],
-	"next_scrape": 1571036835164,
+	"next_scrape": 1571043716171,
 	"category": "plant_sim",
-	"last_update": 1570990416350,
+	"last_update": 1570997060996,
 	"output": [
 		{
 			"args": {},
@@ -271,7 +271,7 @@
 		},
 		{
 			"args": {},
-			"calls": 18634,
+			"calls": 19843,
 			"base": "c:\"kmgwj7\" d:\"<f l n s w>\"\n9*\n\n\n\n               \n                Ã\n               ÃOÃo\n                ÃÃ\n               ",
 			"fragments": [
 				"es yo",
@@ -330,6 +330,6 @@
 			]
 		}
 	],
-	"updt": 1570983654310,
-	"edit": 177
+	"updt": 1570990427956,
+	"edit": 178
 }
