--- a/uknown_el1qyf.bot_brain.json
+++ b/uknown_el1qyf.bot_brain.json
@@ -1,21 +1,21 @@
 {
 	"_id": "uknown_el1qyf.bot_brain",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_el1qyf.bot_brain",
 	"sector": "NGC_1037",
 	"sec_level": 4,
 	"date_added": 1564288470169,
-	"last_scraped": 1570992245170,
+	"last_scraped": 1570998729750,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1564288470169
 		}
 	],
-	"next_scrape": 1571035263416,
+	"next_scrape": 1571038708862,
 	"category": "plant_sim",
-	"last_update": 1570992245170,
+	"last_update": 1570998729750,
 	"output": [
 		{
 			"args": {},
@@ -71,7 +71,7 @@
 		},
 		{
 			"args": {},
-			"calls": 182597,
+			"calls": 183941,
 			"base": "c:\"tt4u3n\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
 			"fragments": [
 				"ying ",
@@ -136,6 +136,6 @@
 			]
 		}
 	],
-	"updt": 1570985235534,
-	"edit": 232
+	"updt": 1570992457990,
+	"edit": 233
 }
