--- a/uknown_kicz6i.k3y_cull.json
+++ b/uknown_kicz6i.k3y_cull.json
@@ -1,25 +1,25 @@
 {
 	"_id": "uknown_kicz6i.k3y_cull",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_kicz6i.k3y_cull",
 	"sector": "K_8441",
 	"sec_level": 4,
 	"date_added": 1562011754363,
-	"last_scraped": 1570998257327,
+	"last_scraped": 1571004497838,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1562011754363
 		}
 	],
-	"next_scrape": 1571041453731,
+	"next_scrape": 1571044518419,
 	"category": "coin_flipper",
-	"last_update": 1570998257327,
+	"last_update": 1571004497838,
 	"output": [
 		{
 			"args": {},
-			"calls": 3325485,
+			"calls": 3340046,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"s' mi",
@@ -87,6 +87,6 @@
 			]
 		}
 	],
-	"updt": 1570992008233,
-	"edit": 331
+	"updt": 1570998316816,
+	"edit": 332
 }
