--- a/unknown_cr8xej.t1_db.json
+++ b/unknown_cr8xej.t1_db.json
@@ -65,26 +65,32 @@
 					"frags": [
 						"| PROG ",
 						"ROR | U",
+						"OR | TI",
 						"OR | NE",
 						"ERROR |",
+						" NETW E",
 						"RROR | P",
+						"NETW ERR",
 						"ETW ERRO"
 					]
 				}
 			]
 		}
 	],
-	"updt": 1570997190318,
-	"edit": 81,
+	"updt": 1571003505737,
+	"edit": 82,
 	"identified": [
 		{
 			"document": "MFT0XF1_CLST0X75_SECT0X73F7_FILE0X9CB5E952",
 			"frags": [
 				"| PROG ",
 				"ROR | U",
+				"OR | TI",
 				"OR | NE",
 				"ERROR |",
+				" NETW E",
 				"RROR | P",
+				"NETW ERR",
 				"ETW ERRO"
 			]
 		}
