--- a/unknown_qmw1np.mpet.json
+++ b/unknown_qmw1np.mpet.json
@@ -1,27 +1,27 @@
 {
 	"_id": "unknown_qmw1np.mpet",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_qmw1np.mpet",
 	"sector": "HJG_4380",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1571001199710,
+	"last_scraped": 1571009876324,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1570995388896,
-	"edit": 67,
-	"next_scrape": 1571044041147,
+	"updt": 1571001477271,
+	"edit": 68,
+	"next_scrape": 1571051685042,
 	"category": "dice_roller",
-	"last_update": 1571001199710,
+	"last_update": 1571009876324,
 	"output": [
 		{
 			"args": {},
-			"calls": 539995,
+			"calls": 551508,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"wish ",
