--- a/unknown_z0zxqu.xkcd.json
+++ b/unknown_z0zxqu.xkcd.json
@@ -59,8 +59,10 @@
 				{
 					"document": "MFT0XF1_CLST0X75_SECT0X73F7_FILE0X9CB5E952",
 					"frags": [
-						"W ERR",
-						" | NET",
+						"OG ERR",
+						"RROR | ",
+						"R | NET",
+						"ETW ERR",
 						" PROG E",
 						"G ERROR ",
 						" ERROR |"
@@ -73,14 +75,16 @@
 		{
 			"document": "MFT0XF1_CLST0X75_SECT0X73F7_FILE0X9CB5E952",
 			"frags": [
-				"W ERR",
-				" | NET",
+				"OG ERR",
+				"RROR | ",
+				"R | NET",
+				"ETW ERR",
 				" PROG E",
 				"G ERROR ",
 				" ERROR |"
 			]
 		}
 	],
-	"updt": 1571003957856,
-	"edit": 162
+	"updt": 1571012752041,
+	"edit": 163
 }
