--- a/derelict_clrnxi.donate.json
+++ b/derelict_clrnxi.donate.json
@@ -62,11 +62,17 @@
 				{
 					"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
 					"frags": [
+						"A_SEC",
 						"7_FIL",
+						"2BC7D",
+						"60 TRA",
+						"LST0X7A",
+						"D032160",
 						"FILE0X2B",
 						"A\\nAD032",
 						"0XBF_CLS",
-						" TRAP is"
+						" TRAP is",
+						"BC7D17A\\n"
 					]
 				}
 			]
@@ -76,14 +82,20 @@
 		{
 			"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
 			"frags": [
+				"A_SEC",
 				"7_FIL",
+				"2BC7D",
+				"60 TRA",
+				"LST0X7A",
+				"D032160",
 				"FILE0X2B",
 				"A\\nAD032",
 				"0XBF_CLS",
-				" TRAP is"
+				" TRAP is",
+				"BC7D17A\\n"
 			]
 		}
 	],
-	"updt": 1571004633109,
-	"edit": 128
+	"updt": 1571013428597,
+	"edit": 129
 }
