--- a/uknown_xf2dal.pub_info_o8aw40.json
+++ b/uknown_xf2dal.pub_info_o8aw40.json
@@ -67,8 +67,13 @@
 				{
 					"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
 					"frags": [
+						"ust b",
+						"st be",
 						"when c",
 						"rds mu",
+						"begins",
+						"ards m",
+						" face d",
 						"t\\n2168 ",
 						"ds must ",
 						"TRAP car",
@@ -83,10 +88,14 @@
 		{
 			"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
 			"frags": [
+				"st be",
 				"when c",
 				"rds mu",
+				"begins",
+				"ards m",
 				"own whe",
 				" must b",
+				" face d",
 				"t\\n2168 ",
 				"t be\\n21",
 				"en comba",
@@ -99,6 +108,6 @@
 			]
 		}
 	],
-	"updt": 1571008014892,
-	"edit": 125
+	"updt": 1571013655281,
+	"edit": 126
 }
