--- a/unknown_hebj0c.break.json
+++ b/unknown_hebj0c.break.json
@@ -66,12 +66,19 @@
 				{
 					"document": "MFT0XF1_CLST0X75_SECT0X73F7_FILE0X9CB5E952",
 					"frags": [
+						"in pa",
 						" be A",
+						"ming, ",
+						"manent",
 						"ay' be",
+						" this ",
 						"s part ",
 						". This ",
+						" AI: th",
+						"m of a r",
 						"ir abili",
-						"and prob"
+						"and prob",
+						" logical"
 					]
 				}
 			]
@@ -81,15 +88,22 @@
 		{
 			"document": "MFT0XF1_CLST0X75_SECT0X73F7_FILE0X9CB5E952",
 			"frags": [
+				"in pa",
 				" be A",
+				"ming, ",
+				"manent",
 				"ay' be",
+				" this ",
 				"s part ",
 				". This ",
+				" AI: th",
+				"m of a r",
 				"ir abili",
-				"and prob"
+				"and prob",
+				" logical"
 			]
 		}
 	],
-	"updt": 1571004633109,
-	"edit": 152
+	"updt": 1571013201481,
+	"edit": 153
 }
