--- a/derelict_nnxezh.uick_start.json
+++ b/derelict_nnxezh.uick_start.json
@@ -66,12 +66,18 @@
 				{
 					"document": "MFT0XD1_CLST0X95_SECT0X23E7_FILE0X8CAB060B",
 					"frags": [
+						"to us",
+						"pted ",
+						"e of ",
 						"appen",
 						"histor",
 						" appro",
+						"nth I'v",
 						"f histo",
 						"y is sti",
-						"tory is "
+						"while hi",
+						"tory is ",
+						"approach"
 					]
 				}
 			]
@@ -81,15 +87,21 @@
 		{
 			"document": "MFT0XD1_CLST0X95_SECT0X23E7_FILE0X8CAB060B",
 			"frags": [
+				"to us",
+				"pted ",
+				"e of ",
 				"appen",
 				"histor",
 				" appro",
+				"nth I'v",
 				"f histo",
 				"y is sti",
-				"tory is "
+				"while hi",
+				"tory is ",
+				"approach"
 			]
 		}
 	],
-	"updt": 1571012524890,
-	"edit": 82
+	"updt": 1571012752041,
+	"edit": 83
 }
