--- a/uknown_tuh6rk.stealgc.json
+++ b/uknown_tuh6rk.stealgc.json
@@ -42,14 +42,155 @@
 			],
 			"hits": [
 				{
+					"document": "NOT FOUND",
+					"frags": [
+						"s' ar",
+						"re mer",
+						"e\":\"ne",
+						"header\"",
+						"f the c",
+						": 'Meme",
+						"ymptom o",
+						"erely a ",
+						"X40_SECT"
+					]
+				},
+				{
 					"document": "MFT0XD1_CLST0X95_SECT0X23E7_FILE0X8CAB060B",
 					"frags": [
 						"to ne",
+						"_FILE",
 						"CODE ",
 						"the wo",
 						"rage y",
 						"k about",
 						"rk of Co"
+					]
+				},
+				{
+					"document": "Erin File",
+					"frags": [
+						"_FILE",
+						"CODE "
+					]
+				},
+				{
+					"document": "MFT0XCF_CLST0X84_SECT0X6B58_FILE0X7A81819D",
+					"frags": [
+						"_FILE",
+						"k about"
+					]
+				},
+				{
+					"document": "Essence",
+					"frags": [
+						"_FILE",
+						"k about"
+					]
+				},
+				{
+					"document": "MFT0X3F_CLST0XD0_SECT0X04CF_FILE0X7ED7C93F",
+					"frags": [
+						"_FILE",
+						"the wo"
+					]
+				},
+				{
+					"document": "MFT0X00_CLST0XF3_SECT0X756A_FILE0XBBE270FC",
+					"frags": [
+						"_FILE",
+						"the wo"
+					]
+				},
+				{
+					"document": "MFT0XF1_CLST0X75_SECT0X73F7_FILE0X9CB5E952",
+					"frags": [
+						"_FILE",
+						"k about"
+					]
+				},
+				{
+					"document": "MFT0XE7_CLST0X7B_SECT0X8CA8_FILE0X5C879769",
+					"frags": [
+						"_FILE"
+					]
+				},
+				{
+					"document": "MFT0X71_CLST0X8A_SECT0X7356_FILE0X14AFF93F",
+					"frags": [
+						"_FILE"
+					]
+				},
+				{
+					"document": "MFT0X82_CLST0X69_SECT0X885F_FILE0X8C8517B2",
+					"frags": [
+						"_FILE"
+					]
+				},
+				{
+					"document": "MFT0X3F_CLST0X0A_SECT0X8F99_FILE0XBD88122E",
+					"frags": [
+						"_FILE"
+					]
+				},
+				{
+					"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
+					"frags": [
+						"_FILE"
+					]
+				},
+				{
+					"document": "MFT0XF4_CLST0XCC_SECT0X7BE4_FILE0XE2A8BDD4",
+					"frags": [
+						"_FILE"
+					]
+				},
+				{
+					"document": "MFT0XCE_CLST0X15_SECT0XAD0C_FILE0X77AB550B",
+					"frags": [
+						"_FILE"
+					]
+				},
+				{
+					"document": "MFT0XE1_CLST0X61_SECT0X665E_FILE0X0D96F593",
+					"frags": [
+						"_FILE"
+					]
+				},
+				{
+					"document": "MFT0XA2_CLST0XE0_SECT0XF623_FILE0XCC32859D",
+					"frags": [
+						"_FILE"
+					]
+				},
+				{
+					"document": "MFT0XD7_CLST0XF7_SECT0X1D2F_FILE0X3A848D07",
+					"frags": [
+						"_FILE"
+					]
+				},
+				{
+					"document": "MFT0X93_CLST0X0B_SECT0XB1F1_FILE0X17858BD3",
+					"frags": [
+						"_FILE"
+					]
+				},
+				{
+					"document": "MFT0X68_CLST0XCA_SECT0X0F5F_FILE0X87AF16DE",
+					"frags": [
+						"_FILE"
+					]
+				},
+				{
+					"document": "MFT0X44_CLST0X35_SECT0XA43B_FILE0XDD1A6B85",
+					"frags": [
+						"_FILE"
+					]
+				},
+				{
+					"document": "MFT0XA7_CLST0X1F_SECT0X57C3_FILE0X8C911BB8",
+					"frags": [
+						"_FILE"
 					]
 				}
 			]
@@ -57,17 +198,158 @@
 	],
 	"identified": [
 		{
+			"document": "NOT FOUND",
+			"frags": [
+				"s' ar",
+				"re mer",
+				"e\":\"ne",
+				"header\"",
+				"f the c",
+				": 'Meme",
+				"ymptom o",
+				"erely a ",
+				"X40_SECT"
+			]
+		},
+		{
 			"document": "MFT0XD1_CLST0X95_SECT0X23E7_FILE0X8CAB060B",
 			"frags": [
 				"to ne",
+				"_FILE",
 				"CODE ",
 				"the wo",
 				"rage y",
 				"k about",
 				"rk of Co"
 			]
+		},
+		{
+			"document": "Erin File",
+			"frags": [
+				"_FILE",
+				"CODE "
+			]
+		},
+		{
+			"document": "MFT0XCF_CLST0X84_SECT0X6B58_FILE0X7A81819D",
+			"frags": [
+				"_FILE",
+				"k about"
+			]
+		},
+		{
+			"document": "Essence",
+			"frags": [
+				"_FILE",
+				"k about"
+			]
+		},
+		{
+			"document": "MFT0X3F_CLST0XD0_SECT0X04CF_FILE0X7ED7C93F",
+			"frags": [
+				"_FILE",
+				"the wo"
+			]
+		},
+		{
+			"document": "MFT0X00_CLST0XF3_SECT0X756A_FILE0XBBE270FC",
+			"frags": [
+				"_FILE",
+				"the wo"
+			]
+		},
+		{
+			"document": "MFT0XF1_CLST0X75_SECT0X73F7_FILE0X9CB5E952",
+			"frags": [
+				"_FILE",
+				"k about"
+			]
+		},
+		{
+			"document": "MFT0XE7_CLST0X7B_SECT0X8CA8_FILE0X5C879769",
+			"frags": [
+				"_FILE"
+			]
+		},
+		{
+			"document": "MFT0X71_CLST0X8A_SECT0X7356_FILE0X14AFF93F",
+			"frags": [
+				"_FILE"
+			]
+		},
+		{
+			"document": "MFT0X82_CLST0X69_SECT0X885F_FILE0X8C8517B2",
+			"frags": [
+				"_FILE"
+			]
+		},
+		{
+			"document": "MFT0XA7_CLST0X1F_SECT0X57C3_FILE0X8C911BB8",
+			"frags": [
+				"_FILE"
+			]
+		},
+		{
+			"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
+			"frags": [
+				"_FILE"
+			]
+		},
+		{
+			"document": "MFT0XF4_CLST0XCC_SECT0X7BE4_FILE0XE2A8BDD4",
+			"frags": [
+				"_FILE"
+			]
+		},
+		{
+			"document": "MFT0XCE_CLST0X15_SECT0XAD0C_FILE0X77AB550B",
+			"frags": [
+				"_FILE"
+			]
+		},
+		{
+			"document": "MFT0XE1_CLST0X61_SECT0X665E_FILE0X0D96F593",
+			"frags": [
+				"_FILE"
+			]
+		},
+		{
+			"document": "MFT0XA2_CLST0XE0_SECT0XF623_FILE0XCC32859D",
+			"frags": [
+				"_FILE"
+			]
+		},
+		{
+			"document": "MFT0XD7_CLST0XF7_SECT0X1D2F_FILE0X3A848D07",
+			"frags": [
+				"_FILE"
+			]
+		},
+		{
+			"document": "MFT0X93_CLST0X0B_SECT0XB1F1_FILE0X17858BD3",
+			"frags": [
+				"_FILE"
+			]
+		},
+		{
+			"document": "MFT0X68_CLST0XCA_SECT0X0F5F_FILE0X87AF16DE",
+			"frags": [
+				"_FILE"
+			]
+		},
+		{
+			"document": "MFT0X44_CLST0X35_SECT0XA43B_FILE0XDD1A6B85",
+			"frags": [
+				"_FILE"
+			]
+		},
+		{
+			"document": "MFT0X3F_CLST0X0A_SECT0X8F99_FILE0XBD88122E",
+			"frags": [
+				"_FILE"
+			]
 		}
 	],
-	"updt": 1571009141391,
-	"edit": 245
+	"updt": 1571015011128,
+	"edit": 246
 }
