--- a/unknown_hz6ahx.scam.json
+++ b/unknown_hz6ahx.scam.json
@@ -72,12 +72,17 @@
 					"frags": [
 						"cards",
 						"er TRA",
+						"der to",
 						"ards\\n",
+						"\\n2169",
+						" resol",
 						"acker T",
 						"ttacker ",
+						"send car",
 						"r TRAPS ",
 						"ins in o",
-						"APS send"
+						"APS send",
+						"169 Atta"
 					]
 				}
 			]
@@ -89,15 +94,20 @@
 			"frags": [
 				"cards",
 				"er TRA",
+				"der to",
 				"ards\\n",
+				"\\n2169",
+				" resol",
 				"acker T",
 				"ttacker ",
+				"send car",
 				"r TRAPS ",
 				"ins in o",
-				"APS send"
+				"APS send",
+				"169 Atta"
 			]
 		}
 	],
-	"updt": 1571008690761,
-	"edit": 143
+	"updt": 1571014563343,
+	"edit": 144
 }
