--- a/uknown_864wmx.fake_users.json
+++ b/uknown_864wmx.fake_users.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_864wmx.fake_users",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_864wmx.fake_users",
 	"sector": "K_2217",
 	"sec_level": 4,
 	"date_added": 1563311813012,
-	"last_scraped": 1571015309223,
+	"last_scraped": 1571021469056,
 	"script_log": [
 		{
 			"type": "added",
@@ -22,15 +22,15 @@
 		]
 	],
 	"pl_output": "Usage:\n`Nusers`: an array of usernames\n`Nmaxusers` (Optional): maximum amount of usernames. Default is max(2, users.​length).\n`Nretired` (Optional): an array of retired usernames.\n`Nmaxretired` (Optional): maximum amount of retired users. Default is 5.\n`Nactiveuser` (Optional): active user. Default is users[0].\nfullscreen:true (Optional): Self explanatory.",
-	"next_scrape": 1571061081390,
-	"updt": 1571009591072,
-	"edit": 1501,
+	"next_scrape": 1571061272441,
+	"updt": 1571015687053,
+	"edit": 1502,
 	"category": "UNKNOWN CATEGORY",
-	"last_update": 1571015309223,
+	"last_update": 1571021469056,
 	"output": [
 		{
 			"args": {},
-			"calls": 4372679,
+			"calls": 4505209,
 			"base": "Usage:\n`Nusers`: an array of usernames\n`Nmaxusers` (Optional): maximum amount of usernames. Default is max(2, users.​length).\n`Nretired` (Optional): an array of retired usernames.\n`Nmaxretired` (Optional): maximum amount of retired users. Default is 5.\n`Nactiveuser` (Optional): active user. Default is users[0].\nfullscreen:true (Optional): Self explanatory.",
 			"fragments": [
 				"e: Er",
