--- a/uknown_wpgu3n.lime.json
+++ b/uknown_wpgu3n.lime.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_wpgu3n.lime",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "dead",
 	"script": "uknown_wpgu3n.lime",
 	"sector": "K_3804",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1564532412979
+		},
+		{
+			"type": "died",
+			"when": 1571023277099
 		}
 	],
 	"next_scrape": 1571064777043,
@@ -242,6 +246,6 @@
 			]
 		}
 	],
-	"updt": 1571012297973,
-	"edit": 255
+	"updt": 1571018390497,
+	"edit": 256
 }
