--- a/unknown_s65jzf.pay_respects.json
+++ b/unknown_s65jzf.pay_respects.json
@@ -1,21 +1,21 @@
 {
 	"_id": "unknown_s65jzf.pay_respects",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_s65jzf.pay_respects",
 	"sector": "VNP_7825",
 	"sec_level": 4,
 	"date_added": 1566471751373,
-	"last_scraped": 1571031274878,
+	"last_scraped": 1571036942285,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1566471751373
 		}
 	],
-	"next_scrape": 1571076381972,
+	"next_scrape": 1571080385052,
 	"category": "plant_sim",
-	"last_update": 1571031274878,
+	"last_update": 1571036942285,
 	"output": [
 		{
 			"args": {},
@@ -49,7 +49,7 @@
 		},
 		{
 			"args": {},
-			"calls": 179637,
+			"calls": 181210,
 			"base": "c:\"587sy1\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
 			"fragments": [
 				" see.",
@@ -97,6 +97,6 @@
 			]
 		}
 	],
-	"updt": 1571025378494,
-	"edit": 227
+	"updt": 1571031471122,
+	"edit": 228
 }
