--- a/uknown_3msky2.k.json
+++ b/uknown_3msky2.k.json
@@ -1,27 +1,27 @@
 {
 	"_id": "uknown_3msky2.k",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_3msky2.k",
 	"sector": "NGC_2868",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1571039461485,
+	"last_scraped": 1571045415124,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1571033952270,
-	"edit": 98,
-	"next_scrape": 1571079528175,
+	"updt": 1571039675621,
+	"edit": 99,
+	"next_scrape": 1571086294178,
 	"category": "coin_flipper",
-	"last_update": 1571039461485,
+	"last_update": 1571045415124,
 	"output": [
 		{
 			"args": {},
-			"calls": 782218,
+			"calls": 812470,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"hrase",
