--- a/uknown_bki41s.log.json
+++ b/uknown_bki41s.log.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_bki41s.log",
 	"type": "fragment",
-	"mode": "could not json",
+	"mode": "dead",
 	"script": "uknown_bki41s.log",
 	"sector": "K_9556",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1563507854841
+		},
+		{
+			"type": "died",
+			"when": 1571044987859
 		}
 	],
 	"scrape_ct": 20,
@@ -1642,8 +1646,8 @@
 			]
 		}
 	],
-	"updt": 1568756582935,
-	"edit": 11,
+	"updt": 1570602128402,
+	"edit": 12,
 	"pl_output": "YOU COULD WIN 2GC with do:\"win\"\n\nOR\n\nYOU COULD `VLOSE`",
 	"retry_args": [
 		{
