--- a/abndnd_suvkcr.release.json
+++ b/abndnd_suvkcr.release.json
@@ -1,27 +1,27 @@
 {
 	"_id": "abndnd_suvkcr.release",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "abndnd_suvkcr.release",
 	"sector": "VNP_9399",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1571039402317,
+	"last_scraped": 1571045164266,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1571033952270,
-	"edit": 84,
-	"next_scrape": 1571084034896,
+	"updt": 1571039449516,
+	"edit": 85,
+	"next_scrape": 1571088309647,
 	"category": "dice_roller",
-	"last_update": 1571039402317,
+	"last_update": 1571045164266,
 	"output": [
 		{
 			"args": {},
-			"calls": 680506,
+			"calls": 705662,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"## go",
