--- a/uknown_qpa3da.interface.json
+++ b/uknown_qpa3da.interface.json
@@ -1,27 +1,27 @@
 {
 	"_id": "uknown_qpa3da.interface",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_qpa3da.interface",
 	"sector": "VNP_9399",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1571039370945,
+	"last_scraped": 1571045043761,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1571033952270,
-	"edit": 86,
-	"next_scrape": 1571079287869,
+	"updt": 1571039449516,
+	"edit": 87,
+	"next_scrape": 1571088056554,
 	"category": "dice_roller",
-	"last_update": 1571039370945,
+	"last_update": 1571045043761,
 	"output": [
 		{
 			"args": {},
-			"calls": 754148,
+			"calls": 771824,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"s | B",
